sandbox/output
TicketDispenserTest.java:68: error: constructor TurnNumberSequenceVip in class TurnNumberSequenceVip cannot be applied to given types;
        TurnNumberSequence vipTurnNumberSequence = new TurnNumberSequenceVip(1001);
                                                   ^
  required: no arguments
  found: int
  reason: actual and formal argument lists differ in length
1 error
